fix: resolve problem with wrong padding at main section

--- a/components/layout/main.module.scss
+++ b/components/layout/main.module.scss
@@ -1,4 +1,3 @@
 .main-content {
     min-height: 100vh;
-    padding: 0 1.25rem;
 }
