--- a/components/sections/hero.module.scss
+++ b/components/sections/hero.module.scss
@@ -3,6 +3,7 @@
 .section {
     height: 100vh;
     width: 100%;
+    padding: 0 1.25rem;
     
     &__wrapper {
         align-items: center;
@@ -14,7 +15,7 @@
         width: 100%;
         @media only screen and (min-width: vars.$desktop-size) {
             justify-content: flex-start;
-            max-width: 1090px;
+            max-width: vars.$page-wrapper-max-size;
         }
     }
 
